<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.activity.LoginActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="24dp">

    <ImageView
        android:id="@+id/reg_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/insta_round_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_sign_in_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/account"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="Email"
        android:padding="13dp"
        android:textColorHint="@color/colorTextSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_img"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/et_sign_in_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/key"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="13dp"
        android:textColorHint="@color/colorTextSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_img"

        app:layout_constraintWidth_percent="0.8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="244dp"
        android:background="@drawable/outline_button"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:enabled="false"
        android:padding="13dp"
        android:text="Log In"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_img"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:drawablePadding="10dp"
        android:onClick="signUpActivity"
        android:padding="13dp"
        android:text="Register Now"
        android:textAllCaps="false"
        android:textColor="@color/goldenColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/tv_sign_in_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:textColor="@color/colorTextPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_sign_in_password"
        app:layout_constraintVertical_bias="0.435"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:drawablePadding="10dp"
        android:onClick="signUpActivity"
        android:padding="13dp"
        android:text="Not Registered yet?"
        android:textAllCaps="false"
        android:textColor="@color/colorTextPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.8" />

    <ProgressBar
        android:id="@+id/pb_sign_in"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/progress_bar"
        android:elevation="10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/reg_img"
        app:layout_constraintVertical_bias="0.439" />

</androidx.constraintlayout.widget.ConstraintLayout>